fix(stats): UNION symbol alignment

--- a/components-ui/union.module.css
+++ b/components-ui/union.module.css
@@ -1,4 +1,6 @@
 .unionSymbol {
+  display: inline-block;
+  vertical-align: middle;
   position: relative;
   top: -0.1em;
 }
